# URL_DETECTOR

./: .replit  README.md  app.py  feature_extractor.py  generate_training_data.py  index.html  ml_model.py  pyproject.toml  replit.md  requirements.txt  results.html  style.css  url_classifier_model.pkl  url_security_training_data.csv
static/: style.css
templates/: index.html  results.html
