[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-whois>=0.9.5",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "trafilatura>=2.0.0",
    "whois>=1.20240129.2",
]
